--- a/02_More_on_PyTorch.ipynb
+++ b/02_More_on_PyTorch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMgcg+pKBzlyuo0f6Lw2VAV",
+      "authorship_tag": "ABX9TyOQsd7Qoerpg5O9H8gIVBZ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2010,25 +2010,169 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### To Dos\n",
+        "\n",
+        "1. Create two tensors,  x from a range of values 1 to 10 and y from a range of values 11 to 20.\n"
+      ],
+      "metadata": {
+        "id": "ECc9ezyZ9HuV"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "!git status"
+        "x = t.arange(1,11)\n",
+        "y = t.arange(11,21)\n",
+        "print(x)\n",
+        "print(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hK1hQIQG9HMU",
+        "outputId": "2d1eb820-280b-4b1a-b44a-556813a8de98"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])\n",
+            "tensor([11, 12, 13, 14, 15, 16, 17, 18, 19, 20])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Reshape tensors x and y to 2 by 5\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0eJcWb3g-AsC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Q2a = x.reshape(2,5)\n",
+        "Q2a"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4vYZR_fVxOJJ",
-        "outputId": "e8a0471b-65e7-46aa-cc89-cf5503f284ee"
+        "outputId": "8266d583-25de-4977-bded-8cdb57c702ab"
       },
-      "execution_count": 58,
+      "execution_count": 65,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: not a git repository (or any of the parent directories): .git\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 1,  2,  3,  4,  5],\n",
+              "        [ 6,  7,  8,  9, 10]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Q2b=y.reshape(2,5)\n",
+        "Q2b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yV6S7dVh6cE3",
+        "outputId": "5571bde5-4d38-442b-9997-1940fe64f18c"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[11, 12, 13, 14, 15],\n",
+              "        [16, 17, 18, 19, 20]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Index out 2,3,7,8 form tensor x and 14,15,19,20 from tensor y, retaining the tensors column style"
+      ],
+      "metadata": {
+        "id": "3mSDaeEh-nZH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Q2a[:, 1:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-D7uq000-mv-",
+        "outputId": "5ef15806-c4b5-44fd-e657-fb809a77bbbf"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[2, 3],\n",
+              "        [7, 8]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Q2b[:, 3:]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N6RX9UTi-kBG",
+        "outputId": "afddd1a1-806b-4ddc-e544-0c4a242564c6"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[14, 15],\n",
+              "        [19, 20]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
         }
       ]
     },
@@ -2036,7 +2180,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "yV6S7dVh6cE3"
+        "id": "l7i0mj8B_dZz"
       },
       "execution_count": null,
       "outputs": []
