--- a/02_More_on_PyTorch.ipynb
+++ b/02_More_on_PyTorch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOQsd7Qoerpg5O9H8gIVBZ5",
+      "authorship_tag": "ABX9TyOpE+aXE3LIys6SeZw7Jn+Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1876,9 +1876,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0506Hl3YRDha",
-        "outputId": "1a7c1be0-ef25-4113-81d1-703391e2b38c"
+        "outputId": "fadb9d4a-4a4d-4e5c-e507-3a8e67ddf66e"
       },
-      "execution_count": 42,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1888,7 +1888,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 76
         }
       ]
     },
@@ -2022,12 +2022,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "x = t.arange(1,11)\n",
-        "y = t.arange(11,21)\n",
-        "print(x)\n",
-        "print(y)"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2059,10 +2054,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "Q2a = x.reshape(2,5)\n",
-        "Q2a"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2087,10 +2079,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "Q2b=y.reshape(2,5)\n",
-        "Q2b"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2124,9 +2113,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "Q2a[:, 1:3]"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2151,9 +2138,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "Q2b[:, 3:]"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2177,10 +2162,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "4. Solve the following expressions:\n",
+        "\n",
+        "a. x+2y\n",
+        "\n",
+        "\n",
+        "b. 5x^2 + 3x +5\n",
+        "\n",
+        "c. x mod y\n",
+        "\n",
+        "d. 3y^3 + 4x^2 + 7"
+      ],
+      "metadata": {
+        "id": "Rx38cSrkAPpr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "l7i0mj8B_dZz"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "o2bdoIZwA2VT"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3eN-GTg8Cdpe"
       },
       "execution_count": null,
       "outputs": []
